--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 # favorites extension config file
 # https://marketplace.visualstudio.com/items?itemName=howardzuo.vscode-favorites
 .vscfavoriterc
+code/res/~$LJA Extensions documentations.xlsx
