dev - translations support

--- a/code/app.json
+++ b/code/app.json
@@ -33,5 +33,6 @@
     "includeSourceInSymbolFile": false
   },
   "runtime": "8.0",
-  "target": "OnPrem"  
+  "target": "OnPrem",
+  "features": ["TranslationFile"]  
 }
