--- a/code/app.json
+++ b/code/app.json
@@ -1,7 +1,7 @@
 {
   "id": "addd31a1-be9b-41df-a0d7-1d1889e80db9",
   "name": "AL Intro",
-  "publisher": "IT.Integro Lukasz Jessa",
+  "publisher": "Lukasz Jessa",
   "version": "1.0.0.0",
   "brief": "",
   "description": "",
@@ -11,16 +11,10 @@
   "url": "",
   "logo": "",
   "dependencies": [
-    {
-      "id": "5d86850b-0d76-4eca-bd7b-951ad998e997",
-      "name": "Tests-TestLibraries",
-      "publisher": "Microsoft",
-      "version": "19.0.0.0"
-    }
   ],
   "screenshots": [],
   "platform": "1.0.0.0",
-  "application": "19.0.0.0",
+  "application": "23.0.0.0",
   "idRanges": [
     {
       "from": 80000,
@@ -32,7 +26,7 @@
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
   },
-  "runtime": "8.0",
-  "target": "OnPrem",
+  "runtime": "12.0",
+  "target": "Cloud",
   "features": ["TranslationFile"]  
 }
